[gd_scene load_steps=7 format=3 uid="uid://bcmcus2arkimt"]

[ext_resource type="Script" path="res://PlayerCharacter.gd" id="1_6std1"]
[ext_resource type="Script" path="res://CameraController.gd" id="2_s732o"]
[ext_resource type="Texture2D" uid="uid://bmgbhcu6t3vug" path="res://Assets/Sprites/shadowcircle.png" id="3_jyma5"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vnllj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kimsb"]

[sub_resource type="BoxMesh" id="BoxMesh_23hyg"]

[node name="CharacterBody3D" type="CharacterBody3D"]
script = ExtResource("1_6std1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999729, 0.023298, 0, -0.023298, 0.999729, 0, 2.9649, 7.9271)
script = ExtResource("2_s732o")

[node name="PlayerCapsuleMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, -3.48787e-16, 3.48787e-16, 3.48787e-16, 1, -3.48787e-16, -3.48787e-16, 3.48787e-16, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_vnllj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_kimsb")

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.973194, 0)

[node name="PlayerEyesCubeMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.29, -1.01148e-16, 1.01148e-16, 1.01148e-16, 0.29, -1.01148e-16, -1.01148e-16, 1.01148e-16, 0.29, 0.440689, 0.34484, 0)
mesh = SubResource("BoxMesh_23hyg")

[node name="ShadowSprite" type="Sprite3D" parent="."]
transform = Transform3D(3.52233, 0, -5.37013e-23, -5.37013e-23, -1.53966e-07, -3.52233, 0, 3.52233, -1.53966e-07, 2.08165e-12, -1.02201, 2.08165e-12)
texture = ExtResource("3_jyma5")
